--- a/bootstrap-3/css/style-intranet.css
+++ b/bootstrap-3/css/style-intranet.css
@@ -3,7 +3,7 @@
 @import url(../font-awesome/css/font-awesome.min.css);
 h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
-  font-family: 'Open Sans';
+  font-family: 'Open Sans2';
 }
 /***************
 	COLOR 
