--- a/bootstrap-3/css/style-intranet.css
+++ b/bootstrap-3/css/style-intranet.css
@@ -8,6 +8,10 @@ h1, h2, h3, h4, h5, h6 {
 /***************
 	COLOR 
 ****************/
+body
+{
+  background: #eee;
+}
 a {
 color: #D9534F;
 text-decoration: none;
@@ -31,30 +35,24 @@ padding: 5px 15px;
   {
   	display: block;
   }
+  .sidebar
+  {
+    display: none;
+  }
 }
 /***************
 	SIDEBAR 
 ****************/
-/* Hide for mobile, show later */
-.sidebar {
-  display: none;
-}
 @media (min-width: 768px) {
   .sidebar {
-    position: fixed;
-    top: 51px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
+    margin-top: 51px;
     padding: 20px;
     background-color: #eee;
     border-right: 1px solid #eee;
   }
 }
-/* Sidebar navigation */
 .nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
+  margin-right: -21px;
   margin-bottom: 20px;
   margin-left: -20px;
 }
@@ -73,6 +71,7 @@ padding: 5px 15px;
 ****************/
 .main
 {
+  background: #fff;
 	margin-top: 51px;
 	padding: 20px;
 }
@@ -85,6 +84,9 @@ padding: 5px 15px;
 .main .page-header {
   margin-top: 0;
 }
+/***************
+  FORMULARIO 
+****************/
 .form
 {
 	padding-top: 10px;
