--- a/bootstrap-3/css/style-intranet.css
+++ b/bootstrap-3/css/style-intranet.css
@@ -74,6 +74,7 @@ padding: 5px 15px;
   background: #fff;
 	margin-top: 51px;
 	padding: 20px;
+  min-height: 600px;
 }
 @media (min-width: 768px) {
   .main {
