--- a/bootstrap-3/DataTables-1.10.2/media/css/jquery.dataTables.css
+++ b/bootstrap-3/DataTables-1.10.2/media/css/jquery.dataTables.css
@@ -21,7 +21,7 @@ table.dataTable tfoot th {
 table.dataTable thead th,
 table.dataTable thead td {
   padding: 10px 18px;
-  border-bottom: 1px solid #111111;
+  border-bottom: 2px solid #ddd;
 }
 table.dataTable thead th:active,
 table.dataTable thead td:active {
@@ -30,7 +30,7 @@ table.dataTable thead td:active {
 table.dataTable tfoot th,
 table.dataTable tfoot td {
   padding: 10px 18px 6px 18px;
-  border-top: 1px solid #111111;
+  border-top: 2px solid #ddd;
 }
 table.dataTable thead .sorting_asc,
 table.dataTable thead .sorting_desc,
@@ -196,7 +196,7 @@ table.dataTable.order-column.hover tbody tr.even:hover.selected > .sorting_3 {
   background-color: #a4b2cb;
 }
 table.dataTable.no-footer {
-  border-bottom: 1px solid #111111;
+  border-bottom: 2px solid #ddd;
 }
 table.dataTable.nowrap th, table.dataTable.nowrap td {
   white-space: nowrap;
@@ -336,7 +336,7 @@ table.dataTable td {
   border: 1px solid transparent;
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
-  color: #333333 !important;
+  color: #fff !important;
   border: 1px solid #cacaca;
   background-color: #D9534F;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #D9534F), color-stop(100%, #D9534F));
